--- a/index.html
+++ b/index.html
@@ -3,14 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="迷因, 心理測驗, 搞笑, 動物測試, 心理分析">
+    <meta name="description" content="測試看看你是甚麼樣的動物。">
+    <!-- 呈現在瀏覽器上的資訊 -->
+    <meta property="og:site_name" content="N+恩牙醫聯盟">
+    <meta property="og:title" content="N+恩牙醫聯盟－心理測驗" />
+    <meta property="og:description" content="測試看看你是甚麼樣的動物。">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://uniqdefinder.github.io/N-n_Dental_Event/" />
+    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <!-- 被分享時的資訊 -->
+    
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="N+恩牙醫聯盟－心理測驗">
+    <meta name="twitter:description" content="測試看看你是甚麼樣的動物。">
+    <meta name="twitter:image" content="https://ia.media-imdb.com/images/rock.jpg">
+    <!-- 被Twitter分享時的資訊 -->
+
+    <link rel="canonical" href="https://uniqdefinder.github.io/N-n_Dental_Event/">
+    <!-- 確保搜索引擎知道這是這個頁面的正確URL -->
+
     <title>測試測驗</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/js/main.js" charset="utf-8"></script>
 </head>
 <body>
-    <p>hello word !</p>
-    
+    <h1>心理測驗：測試看看你是甚麼樣的動物</h1>
 </body>
 </html>
