--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="測試看看你是甚麼樣的動物。">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://uniqdefinder.github.io/N-n_Dental_Event/" />
-    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:image" content='https://uniqdefinder.github.io/N-n_Dental_Event/src/imgs/皮皮拿牙刷_小版.png' />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <!-- 被分享時的資訊 -->
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="N+恩牙醫聯盟－心理測驗">
     <meta name="twitter:description" content="測試看看你是甚麼樣的動物。">
-    <meta name="twitter:image" content="https://ia.media-imdb.com/images/rock.jpg">
+    <meta name="twitter:image" content="https://uniqdefinder.github.io/N-n_Dental_Event/src/imgs/皮皮拿牙刷_小版.png">
     <!-- 被Twitter分享時的資訊 -->
 
     <link rel="canonical" href="https://uniqdefinder.github.io/N-n_Dental_Event/">
