--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
 
     gtag('config', 'G-B9P4BV3XEY');
     </script>
+    <!-- Google tag (gtag.js) -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="迷因, 心理測驗, 搞笑, 動物測試, 心理分析">
     <meta name="description" content="測試看看你是甚麼樣的動物。">
     <!-- 呈現在瀏覽器上的資訊 -->
+
     <meta property="og:site_name" content="N+恩牙醫聯盟">
     <meta property="og:title" content="N+恩牙醫聯盟－心理測驗" />
     <meta property="og:description" content="測試看看你是甚麼樣的動物。">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://uniqdefinder.github.io/N-n_Dental_Event/" />
     <meta property="og:image" content='https://uniqdefinder.github.io/N-n_Dental_Event/src/imgs/皮皮拿牙刷_小版.png' />
-    <meta property="og:image:width" content="1200">
+    <meta property="og:image:width" content="630">
     <meta property="og:image:height" content="630">
     <!-- 被分享時的資訊 -->
     
